--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VUE SLIDER</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
 </head>
 <body>
     <div id="app">
 
-        <div class="container">
+        <div class="ms_container position-relative">
             <img :src="immagini[currentCounterIndex].image" :alt="immagini[currentCounterIndex].name">
+            <div class="position-absolute top-50 start-0 translate-middle-y" @click="prevSlide">PREV</div>
+            <div class="position-absolute top-50 end-0 translate-middle-y" @click="nextSlide">NEXT</div>
         </div>
-        <div @click="prevSlide">PREV</div>
-        <div @click="nextSlide">NEXT</div>
-
+               
+        <i v-for="pallina in palline" class="fas fa-circle" :class="addColor()"></i>
 
     </div>
 
