clearInterval fix js

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div id="app">
 
-        <div class="ms_container position-relative">
-            <img :src="immagini[currentCounterIndex].image" :alt="immagini[currentCounterIndex].name">
+        <div class="ms_container position-relative" @mouseover="mouseOver" @mouseleave="mouseLeave" >
+            <img :src="immagini[currentCounterIndex].image" :alt="immagini[currentCounterIndex].name" >
             <div class="position-absolute top-50 start-0 translate-middle-y ms_prev" @click="prevSlide"><i class="fas fa-arrow-left"></i></div>
             <div class="position-absolute top-50 end-0 translate-middle-y ms_next" @click="nextSlide"><i class="fas fa-arrow-right"></i></div>
            
